// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Icon correctly applies the theme context className 1`] = `
<div
  className="icon-container orion-fusion-theme"
>
  <span
    className="icon alert-icon"
  />
</div>
`;

exports[`Notification Icon shallow renders alert icon 1`] = `
<div
  className="icon-container"
>
  <span
    className="icon alert-icon"
  />
</div>
`;

exports[`Notification Icon shallow renders custom icon container 1`] = `
<div
  className="icon-container"
>
  <span
    className="icon custom-icon undefined"
  />
</div>
`;

exports[`Notification Icon shallow renders custom icon container 2`] = `
<div
  className="icon-container"
>
  <span
    className="icon custom-icon my-icon-class"
  />
</div>
`;

exports[`Notification Icon shallow renders error icon 1`] = `
<div
  className="icon-container"
>
  <span
    className="icon error-icon"
  />
</div>
`;

exports[`Notification Icon shallow renders info icon 1`] = `
<div
  className="icon-container"
>
  <span
    className="icon info-icon"
  />
</div>
`;

exports[`Notification Icon shallow renders warning icon 1`] = `
<div
  className="icon-container"
>
  <span
    className="icon warning-icon"
  />
</div>
`;
